# arcade

./: .gitignore  README.md  data.json  install-arcade.sh  keymapping.excalidraw  test.py  update_metadata_for_all_games.py  watchdog.py  watchdog.sh
.devcontainer/: devcontainer.json
games/2324-breakout-L-T/: metadata.json
games/2425-h4in1-opsk-game-dave-simon-h4c-main/: main.py  metadata.json  uitbreidingen.md
games/2425-h4in2-koou-game-koote-master/: main.py  metadata.json
games/2526-h4in1-opsk-pygame-opdracht-sami-main/: README.md  metadata.json  pyproject.toml  requirements.txt
games/2526-h4in1-opsk-pygame-opdracht-sami-main/.devcontainer/: devcontainer.json  postCreateCommand.sh
games/2526-h4in1-opsk-pygame-opdracht-sami-main/assets/: BreakoutAtlas-default.json  BreakoutAtlas-doodle.json  breakout_atlas.pxo  duo_levels.json  levels.json  profanity.json
games/2526-h4in1-opsk-pygame-opdracht-sami-main/assets/scoreboard/: duos.json  freeplay.json  game.json
games/2526-h4in1-opsk-pygame-opdracht-sami-main/neferen/: idk.py
games/2526-h4in1-opsk-pygame-opdracht-sami-main/pijthon_psel/: __main__.py  cheats.py  classes.py  freeplay.py  game.py  keyboard.py  menu.py  multiplayer.py  score.py  scoreboard.py  setup.py
games/2526-h4in1-opsk-pygame-opdracht-sami-main/pijthon_psel_ffi/: Cargo.toml  __init__.pyi
games/2526-h4in1-opsk-pygame-opdracht-sami-main/pijthon_psel_ffi/src/: heapsort.rs  lib.rs
games/2526-h4in1-opsk-pygame-opdracht-sami-main/rest/: ConceptMenu.excalidraw  ConceptMenu_v2.excalidraw  instruct.md
menu/: main.py
src/menu/: main.py
(+321 files in other folders)
